--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -149,7 +149,7 @@
 
     // Redirect to Sign-Up page
     signUpBtn.addEventListener("click", () => {
-      window.location.href = "../signIn.html"; // Adjust path as needed
+      window.location.href = "../index.html"; // Adjust path as needed
     });
 
     form.addEventListener("submit", async function (e) {
