--- a/frontend/pages/addMovie.html
+++ b/frontend/pages/addMovie.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Add Movie</title>
-    <style>
+  <style>
     * {
       box-sizing: border-box;
       margin: 0;
@@ -14,18 +14,11 @@
 
     body {
       background-color: #f5f9ff;
-      color: #222;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 30px;
-    }
-
-    h2 {
-      text-align: center;
-      color: #004aad;
-      margin-bottom: 20px;
     }
 
     form {
@@ -34,12 +27,32 @@
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       width: 100%;
-      max-width: 500px;
+      max-width: 700px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #004aad;
+      margin-bottom: 20px;
+    }
+
+    .form-group {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+
+    .form-group.full {
+      flex-direction: column;
+    }
+
+    .form-group > div {
+      flex: 1;
     }
 
     label {
       display: block;
-      margin-top: 15px;
+      margin-bottom: 5px;
       font-weight: 500;
       color: #333;
     }
@@ -48,7 +61,6 @@
     textarea {
       width: 100%;
       padding: 10px;
-      margin-top: 5px;
       border: 1px solid #ccc;
       border-radius: 8px;
       background-color: #fefefe;
@@ -67,7 +79,7 @@
     }
 
     button {
-      margin-top: 25px;
+      margin-top: 20px;
       width: 100%;
       padding: 12px;
       background: #007bff;
@@ -88,28 +100,46 @@
 </head>
 <body>
 
- 
   <form id="movieForm">
-    <label for="movieName">Movie Name</label>
-    <input type="text" id="movieName" name="movieName" required />
+    <h2>Add Movie</h2>
 
-    <label for="duration">Duration (minutes)</label>
-    <input type="number" id="duration" name="duration" required />
+    <div class="form-group">
+      <div>
+        <label for="movieName">Movie Name</label>
+        <input type="text" id="movieName" name="movieName" required />
+      </div>
+      <div>
+        <label for="duration">Duration (minutes)</label>
+        <input type="number" id="duration" name="duration" required />
+      </div>
+    </div>
 
-    <label for="releaseYear">Release Year</label>
-    <input type="number" id="releaseYear" name="releaseYear" required />
+    <div class="form-group">
+      <div>
+        <label for="releaseYear">Release Year</label>
+        <input type="number" id="releaseYear" name="releaseYear" required />
+      </div>
+      <div>
+        <label for="genre">Genre</label>
+        <input type="text" id="genre" name="genre" required />
+      </div>
+    </div>
 
-    <label for="genre">Genre</label>
-    <input type="text" id="genre" name="genre" required />
+    <div class="form-group full">
+      <label for="description">Description</label>
+      <textarea id="description" name="description" rows="4" required></textarea>
+    </div>
 
-    <label for="description">Description</label>
-    <textarea id="description" name="description" rows="4" required></textarea>
-
-    <label for="director">Director</label>
-    <input type="text" id="director" name="director" required />
-
-    <label for="photo">Movie Image</label>
-    <input type="file" id="photo" name="photo" accept="image/*" />
+    <div class="form-group">
+      <div>
+        <label for="director">Director</label>
+        <input type="text" id="director" name="director" required />
+      </div>
+      <div>
+        <label for="photo">Movie Image</label>
+        <input type="file" id="photo" name="photo" accept="image/*" />
+      </div>
+    </div>
 
     <button type="submit">Upload Movie</button>
   </form>
@@ -122,14 +152,13 @@
 
       const formData = new FormData(form);
 
-      // Get token from localStorage or set it manually for testing
       const authToken = localStorage.getItem("token") || "YOUR_HARDCODED_TOKEN_HERE";
 
       try {
         const res = await fetch("https://movie-listing-app-au97.onrender.com/addMovie", {
           method: "POST",
           headers: {
-            "Authorization": authToken // not Bearer
+            "Authorization": authToken
           },
           body: formData,
         });
@@ -143,7 +172,7 @@
           alert("Upload failed: " + (data.message || "Unknown error"));
         }
       } catch (err) {
-        //alert("Error: " + err.message);
+        alert("Error: " + err.message);
       }
     });
   </script>
