--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -2,152 +2,157 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dashboard - 2 Columns of Movie Rows</title>
-  <style>body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f0f4ff;
-  margin: 0;
-  padding: 0;
-  color: #1a237e; /* dark blue text */
-}
+  <title>Dashboard </title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f4ff;
+      margin: 0;
+      padding: 0;
+      color: #1a237e;
+    }
 
-nav {
-  background-color: #1a237e; /* dark blue */
-  color: white;
-  padding: 1rem 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0 2px 8px rgba(26, 35, 126, 0.7);
-}
+    nav {
+      background-color: #1a237e;
+      color: white;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 8px rgba(26, 35, 126, 0.7);
+    }
 
-nav h2 {
-  margin: 0;
-  font-size: 24px;
-  letter-spacing: 1.2px;
-  font-weight: 700;
-}
+    nav h2 {
+      margin: 0;
+      font-size: 24px;
+      letter-spacing: 1.2px;
+      font-weight: 700;
+    }
 
-.nav-buttons {
-  display: flex;
-  gap: 15px;
-}
+    .nav-buttons {
+      display: flex;
+      gap: 15px;
+    }
 
-.nav-buttons button {
-  padding: 10px 20px;
-  background-color: #3f51b5; /* medium blue */
-  border: none;
-  border-radius: 6px;
-  color: white;
-  font-size: 15px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+    .nav-buttons button {
+      padding: 10px 20px;
+      background-color: #3f51b5;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-.nav-buttons button:hover {
-  background-color: #283593; /* darker blue */
-}
+    .nav-buttons button:hover {
+      background-color: #283593;
+    }
 
-#moviesContainer {
-  max-width: 1000px;
-  margin: 30px auto 50px auto;
-  padding: 20px 30px;
-  background: white;
-  border-radius: 12px;
-  box-shadow: 0 0 20px rgba(63, 81, 181, 0.15);
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
-}
+    #moviesContainer {
+      max-width: 1000px;
+      margin: 30px auto 50px auto;
+      padding: 20px 30px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(63, 81, 181, 0.15);
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+    }
 
-/* Each movie column container with 2 movies stacked vertically */
-.movie-column {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
+    .movie-column {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
 
-/* Each movie row - image + details side by side */
-.movie-row {
-  display: flex;
-  gap: 25px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #d0dfff;
-  align-items: center;
-  height: 345px; /* match image height */
-}
+    .movie-row {
+      display: flex;
+      gap: 25px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid #d0dfff;
+      align-items: center;
+      height: 345px;
+    }
 
-.movie-row img {
-  width: 240px;      /* increased width by 50% */
-  height: 345px;     /* adjusted height proportionally */
-  object-fit: cover;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(63, 81, 181, 0.25);
-  user-select: none;
-  flex-shrink: 0;
-}
+    .movie-row img {
+      width: 240px;
+      height: 345px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(63, 81, 181, 0.25);
+      user-select: none;
+      flex-shrink: 0;
+    }
 
-.movie-details {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 8px;
-  color: #283593;
-  font-weight: 500;
-  font-size: 16px;
-}
+    .movie-details {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 8px;
+      color: #283593;
+      font-weight: 500;
+      font-size: 16px;
+    }
 
-.movie-details h3 {
-  margin: 0;
-  font-size: 22px;
-  font-weight: 700;
-  color: #1a237e;
-}
+    .movie-details h3 {
+      margin: 0;
+      font-size: 22px;
+      font-weight: 700;
+      color: #1a237e;
+    }
 
-.movie-details p {
-  margin: 0;
-  line-height: 1.3;
-}
+    .movie-details p {
+      margin: 0;
+      line-height: 1.3;
+    }
 
-@media (max-width: 900px) {
-  #moviesContainer {
-    grid-template-columns: 1fr; /* single column on smaller screens */
-    padding: 20px;
-  }
-  .movie-column {
-    gap: 40px;
-  }
-  .movie-row {
-    flex-direction: column;
-    height: auto;
-  }
-  .movie-row img {
-    width: 100%;
-    height: auto;
-    border-radius: 12px;
-  }
-  .movie-details {
-    font-size: 14px;
-  }
-  .nav-buttons button {
-    padding: 8px 16px;
-    font-size: 14px;
-  }
-  nav h2 {
-    font-size: 20px;
-  }
-}
-</style>
+    @media (max-width: 900px) {
+      #moviesContainer {
+        grid-template-columns: 1fr;
+        padding: 20px;
+      }
+
+      .movie-column {
+        gap: 40px;
+      }
+
+      .movie-row {
+        flex-direction: column;
+        height: auto;
+      }
+
+      .movie-row img {
+        width: 100%;
+        height: auto;
+        border-radius: 12px;
+      }
+
+      .movie-details {
+        font-size: 14px;
+      }
+
+      .nav-buttons button {
+        padding: 8px 16px;
+        font-size: 14px;
+      }
+
+      nav h2 {
+        font-size: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
 
   <nav>
-    <h2>Movie Dashboard</h2>
     <div class="nav-buttons">
-      <button id="uploadBtn">Upload Movie</button>
-      <button id="myMoviesBtn">My Movies</button>
+      <button id="uploadBtn">upload</button>
+      <button id="myMoviesBtn">📽️</button>
     </div>
+    <h2>Movies</h2>
   </nav>
 
   <div id="moviesContainer">Loading movies...</div>
@@ -182,7 +187,6 @@ nav h2 {
           return;
         }
 
-        // Show first 6 movies in 2 columns
         movies.slice(0, 6).forEach(movie => {
           const row = document.createElement("div");
           row.className = "movie-row";
